# cw5_hh_db

./: .gitignore  README.md  database.ini  main.py  pyproject.toml
classes/: dbmanager.py  headhunter.py
utils/: config.py  db_tools.py
